# syn-os

./: .gitignore  README.md  pytest.ini  verify_log.txt
.github/workflows/: ci.yml
api/: pyproject.toml
api/security/: __init__.py  collector.py  nids.py
api/security/ml/: __init__.py  anomaly.py  classifier.py
api/synos_api/: __init__.py  dag.py  fault_tolerance.py  main.py  metrics.py
api/synos_api/core/: __init__.py  circuit_breaker.py  mock_kernel.py  scheduler.py  socket.py
api/synos_api/middleware/: __init__.py
api/synos_api/routes/: __init__.py  devices.py  geo.py  scanner.py  security.py  synapse.py  threat_intel.py
api/synos_api/schemas/: __init__.py  geo.py  security.py
infra/archiso/profile/: packages.x86_64
infra/archiso/profile/airootfs/root/: customize_airootfs.sh
infra/boot/plymouth/: synos.plymouth  synos.script
infra/docker/: Dockerfile.api  Dockerfile.kernel  Dockerfile.ml  docker-compose.yml  prometheus.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/docker/grafana/provisioning/dashboards/json/: ml_models.json  overview.json
infra/docker/grafana/provisioning/datasources/: datasources.yml
infra/docker/prometheus/alerts/: synos.yml
infra/kiosk/: synos-kiosk.sh  xinitrc
infra/kubernetes/: config.yaml  deploy.ps1  deploy.sh  ingress.yaml  namespace.yaml
infra/kubernetes/api/: deployment.yaml
infra/kubernetes/databases/: databases.yaml
infra/kubernetes/ml-service/: deployment.yaml
infra/kubernetes/monitoring/: monitoring.yaml
infra/kubernetes/security/: rbac.yaml
infra/kubernetes/service-mesh/: istio.yaml
infra/postgres/: init_postgis.sql
kernel/: Cargo.toml
kernel/src/: event_loop.rs  executor.rs  lib.rs  python.rs  queue.rs  scanner.rs  scheduler.rs  task.rs
ml/: pyproject.toml
ml/synos_ml/: __init__.py  train_online.py
ml/synos_ml/core/: __init__.py  replay_buffer.py
ml/synos_ml/data/: __init__.py  collector.py  features.py  validation.py
ml/synos_ml/models/: __init__.py  anomaly.py  fingerprinter.py  forecaster.py  gnn.py  nids.py  predictor.py  trajectory.py  vuln_predictor.py
ml/synos_ml/scheduler/: __init__.py  multi_agent.py  ppo.py
ml/synos_ml/serving/: __init__.py  client.py  server.py
ml/synos_ml/training/: __init__.py  ab_testing.py  deployment.py  drift.py  hyperopt.py  online.py  retraining.py  trainer.py
ml_models/: nids.pth  trajectory_predictor.pkl  vuln_predictor.pkl
scripts/: train_security_models.py  train_trajectory_model.py  verify_scanner.py  war_games_simulation.py
tests/: verify_scheduler.py  verify_security_ml.py  verify_system.py
tests/integration/: __init__.py  test_api.py
tests/ml/: __init__.py  test_models.py
