[package]
name = "synos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Syn OS Team"]
description = "AI-Powered Operating System Kernel"
license = "MIT"

[lib]
name = "synos_kernel"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
prometheus = "0.13"
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
dashmap = "5.5"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
