[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synos-ml"
version = "0.1.0"
description = "Syn OS Machine Learning Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Syn OS Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Graph Neural Networks
    "torch-geometric>=2.4.0",
    
    # Time Series
    "pandas>=2.0.0",
    
    # Reinforcement Learning
    "gymnasium>=0.29.0",
    
    # Optimization
    "optuna>=3.4.0",
    
    # API & Serving
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

grpc = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
]

full = [
    "synos-ml[dev,grpc]",
    "tensorboard>=2.15.0",
    "mlflow>=2.9.0",
]

[project.scripts]
synos-ml-serve = "synos_ml.serving.server:main"
synos-ml-train = "synos_ml.training.trainer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synos_ml*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=synos_ml --cov-report=term-missing"
